# th3cl4w

./: .env.example  .gitignore  HEARTBEAT.md  README.md  pyproject.toml  requirements.txt  th3cl4w-ctl.sh  theclaw
calibration/: __init__.py  ascii_to_grayscale.py  cam0_calibration.json  cam1_calibration.json  capture_frames.py  compute_transforms.py  config.yaml  validate.py
calibration_results/: cal_1770590048_review.md  calibration_assessment_v2.md  cam0_checkerboard_calibration.json  cam1_checkerboard_calibration.json  cam2_checkerboard_calibration.json  camera0_extrinsics.json  camera_extrinsics.json  camera_intrinsics.json  comparison_report.md  comparison_run_notes.md  data_review.md  frame_analysis_batch_A.md  frame_analysis_batch_B.md  frame_analysis_batch_C.md  frame_analysis_batch_D.md  full_comparison.json  full_comparison_report.md  intrinsic_estimation.md
data/: calibration-council-briefing.md  camera_config.json  camera_intrinsics.json  council-kinematics-report.md  council-safety-report.md  council-vision-report.md  follow-ups.md  grasp_strategies.json  object_ontology.json  pick_config.json  pick_episodes.jsonl  task_graph.json  telemetry.db  telemetry.db-shm  telemetry.db-wal
deploy/: docker-compose.dev.yml  docker-compose.yml
docs/: 3d-recon-calibration-plan.md  3d-recon-workplan.md  3d-reconstruction-plan-A.md  3d-reconstruction-plan-B.md  3d-reconstruction-plan.md  ascii-video-plan.md  audit-report.md  branch-review.md  camera-api-spec.md  camera-orientation.md  contact-detection-plan.md  council-a-review.md  council-b-review.md  d1-safety-parameters.md  day2-review-code.md  day2-review-summary.md  engineering-followup-plan.md  joint-mapping.md  live-video-streaming-plan.md  llm-ascii-calibration-plan.md  llm-cv-comparison-plan.md  logging-audit.md  map-server-plan.md  mapping-audit.md  pick-attempt-report.md  realtime-vision-positioning-plan.md  safety-audit.md  sim-pick-engineering-plan.md  subagent-plan-day4-afternoon.md  test-coverage-report.md  vla-architecture.md
examples/: connection_test.py
frame_sync/: __init__.py  browser_hook.js  pair_matcher.py  ws_server.py
memory/: 2026-02-08-session2.md  2026-02-08.md
qa_sidecar/: __init__.py  __main__.py  config.py  issue_logger.py  run_qa.py  runner.py
research/: work-plan.md  (+9 more)
(+569 files in other folders)
